# cpp_concurrency_in_action

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/: Sanitizer.cmake
include/2-thread-management/: joining_thread.h  parallel_accumulate.h  scoped_thread.h  thread_guard.h
src/: CMakeLists.txt
src/2-thread-management/: CMakeLists.txt  joining_thread.cpp  scoped_thread.cpp  thread_guard.cpp
tests/: CMakeLists.txt  custom_gtest_main.cpp  stack_use_after_scope.cpp
tests/2-thread-management/: CMakeLists.txt  jthread_test.cpp  parallel_accumulate_test.cpp  pass_arguments_test.cpp  scoped_thread_test.cpp  thread_guard_test.cpp  transfer_ownership_test.cpp
